# ctxfs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  appcast.xml  index.html
.claude/agents/: bug-triage.md  engineer.md  option-a-advocate.md  option-b-advocate.md  quality-reviewer.md  spec-reviewer.md
.claude/skills/: .gitignore
.claude/skills/ctxfs/: SKILL.md
.claude/skills/ctxfs-dev/: SKILL.md
.claude/skills/ctxfs-dev/evals/: evals.json
.claude/skills/ctxfs/evals/: evals.json
.github/release-notes/: v0.0.1.md  v0.1.0.md  v0.1.1.md  v0.1.2.md
.github/workflows/: ci.yml  publish-metadata.yml  release.yml
crates/ctxfs-app-helper/: Cargo.toml
crates/ctxfs-app-helper/src/: handler.rs  main.rs  rpc.rs
crates/ctxfs-app-helper/tests/: e2e.rs
crates/ctxfs-cache/: Cargo.toml
crates/ctxfs-cache-redis/: Cargo.toml
crates/ctxfs-cache-redis/src/: lib.rs
crates/ctxfs-cache/src/: lib.rs  reservation.rs  resolution.rs  shared.rs  tree.rs
crates/ctxfs-cache/tests/: lifecycle.rs  reservation.rs  tiered_cache.rs
crates/ctxfs-cli/: Cargo.toml
crates/ctxfs-cli/src/: backend.rs  diag.rs  install_path.rs  main.rs  setup.rs  symlink.rs  update.rs
crates/ctxfs-cli/tests/: e2e.rs  e2e_fskit.rs  json_output.rs  status_bench.rs
crates/ctxfs-cli/tests/common/: mod.rs
crates/ctxfs-core/: Cargo.toml
crates/ctxfs-core/src/: backend.rs  config.rs  digest.rs  error.rs  ext_status.rs  lib.rs  provider.rs  source.rs
crates/ctxfs-core/tests/: cross_crate.rs
crates/ctxfs-daemon/: Cargo.toml
crates/ctxfs-daemon/src/: daemon.rs  fskit_mount.rs  lib.rs  mount_state.rs  observability.rs
crates/ctxfs-fskit/: Cargo.toml
crates/ctxfs-fskit/src/: adapter.rs  auth.rs  fs.rs  lib.rs  slug.rs
crates/ctxfs-fskit/tests/: adapter_ops.rs  e2e_auth.rs  proto_authenticate_compiles.rs
crates/ctxfs-fuse/: Cargo.toml
crates/ctxfs-fuse/src/: fs.rs  lib.rs
crates/ctxfs-ipc/: Cargo.toml
crates/ctxfs-ipc/src/: lib.rs  service.rs  transport.rs
crates/ctxfs-ipc/tests/: rpc_roundtrip.rs
crates/ctxfs-manifest/: Cargo.toml
crates/ctxfs-manifest/src/: inode.rs  lib.rs  snapshot.rs
crates/ctxfs-nfs/: Cargo.toml
crates/ctxfs-nfs/src/: fs.rs  lib.rs
crates/ctxfs-nfs/tests/: medium_repo.rs  nfs_read_path.rs
crates/ctxfs-provider-common/: Cargo.toml
crates/ctxfs-provider-common/src/: counters.rs  fetcher.rs  http.rs  lfs.rs  lib.rs  mock.rs  observability.rs  rate_limit.rs  repo_url.rs  resolver.rs  status.rs
crates/ctxfs-provider-common/tests/: content_fetcher_implementable.rs  replay_basic.rs
crates/ctxfs-provider-crate/: Cargo.toml
crates/ctxfs-provider-crate/src/: lib.rs
crates/ctxfs-provider-crate/tests/: resolve.rs
crates/ctxfs-provider-git/: Cargo.toml
crates/ctxfs-provider-git/src/: context.rs  github.rs  lib.rs  token.rs
crates/ctxfs-provider-git/tests/: build_directories.rs  replay_b5_reservation_protects_active.rs  replay_b5_tree_cache_ownership.rs  replay_lfs_detect_surfaces_count.rs  replay_oversized_skipped.rs  replay_path_traversal_rejected.rs  replay_singleflight_dedupe.rs  replay_tarball_small_blob_cache_bypass.rs  replay_tarball_three_calls.rs  replay_truncated_tree_walk.rs
crates/ctxfs-provider-git/tests/common/: mod.rs
crates/ctxfs-provider-npm/: Cargo.toml
crates/ctxfs-provider-npm/src/: lib.rs
crates/ctxfs-provider-npm/tests/: resolve.rs
crates/ctxfs-provider-pypi/: Cargo.toml
crates/ctxfs-provider-pypi/src/: lib.rs
crates/ctxfs-provider-pypi/tests/: resolve.rs
crates/ctxfs-vfs/: Cargo.toml
crates/ctxfs-vfs/src/: lib.rs  state.rs  types.rs
crates/ctxfs-vfs/tests/: vfs_ops.rs
crates/fskit-rs/: Cargo.toml
crates/fskit-rs/src/: auth.rs  handler.rs  lib.rs  mounter.rs  protocol.proto  session.rs  socket.rs
crates/fskit-rs/tests/: auth_handshake.rs  mock_fs.rs
docs/: phase3-bootstrap-runbook.md  phase3-sparkle-smoke-test.md  phase4-bug-triage.md  phase4-m3-handoff.md  phase4-m4-handoff.md  phase4-m5-handoff.md  phase4-option-a-memo.md  phase4-option-b-memo.md  phase4-rate-limit-handoff.md  phase4-research-brief.md
docs/m3-handoffs/: engineer-T1.md  engineer-T5.md  engineer-T6.md
docs/m5-handoffs/: engineer-T4.md
docs/poc/: fskit-phase1-smoke-test.md
docs/poc/fskit-poc/: Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-07-multi-mount-and-deps.md  2026-04-07-multi-provider.md  2026-04-07-tiered-caching.md  2026-04-12-fskit-backend.md  2026-04-13-fskit-phase1-wire-up.md  2026-04-15-fskit-phase-1.5-auth-handshake.md  2026-04-16-phase-2a-rename-and-config.md  2026-04-19-phase-2b-a-rust-foundation.md  2026-04-19-phase-2b-b-swift-companion-app.md  2026-04-20-phase-3a-sparkle-integration.md  2026-04-20-phase-3b-ctxfs-update-subcommand.md  2026-04-20-phase-3c-versioning-release-script.md  2026-04-20-phase-3d-github-actions-pipeline.md  2026-04-20-phase-3e-bootstrap-first-release.md  2026-04-25-phase-4-m1-observability.md  2026-04-25-phase-4-m2-architecture-neutral-fixes.md  2026-04-27-phase-4-m3-tarball-prefetch.md  2026-04-29-phase-4-m4-content-fetcher-lift.md  2026-04-29-phase-4-m5-remaining-bugs.md
docs/superpowers/specs/: 2026-04-06-multi-provider-design.md  2026-04-07-multi-mount-and-deps-design.md  2026-04-07-tiered-caching-design.md  2026-04-11-fskit-backend-design.md  2026-04-18-contextfs-companion-app-design.md  2026-04-20-phase-3-distribution-design.md  2026-04-25-phase-4-rate-limit-design.md
scripts/: README.md  append-appcast-item.py  release.sh  render-homebrew.py
swift/: README.md
swift/ContextFS/: build-rust.sh
swift/ContextFS/ContextFS/: ContextFS.swift  Info.plist  LaunchdAgent.swift  LoginItem.swift  MenuBarView.swift  MenuContent.swift  OnboardingView.swift  PreferencesView.swift  SparkleMenuAction.swift
swift/ContextFS/ContextFS.xcodeproj/: project.pbxproj
swift/ContextFS/ContextFSExt/: Info.plist  Volume.swift
swift/ContextFS/FSKitExt/: protocol.proto
swift/CtxfsFS/FSKitBridge.xcodeproj/: project.pbxproj
swift/CtxfsFS/FSKitExt/: Bridge.swift  Data+Hex.swift  Socket.swift
tests/scripts/: conftest.py  test_append_appcast_item.py  test_render_homebrew.py
(+3 files in other folders)
