[workspace]
members = [
    "crates/ctxfs-core",
    "crates/ctxfs-manifest",
    "crates/ctxfs-cache",
    "crates/ctxfs-ipc",
    "crates/ctxfs-provider-git",
    "crates/ctxfs-nfs",
    "crates/ctxfs-daemon",
    "crates/ctxfs-cli",
    "crates/ctxfs-provider-common",
    "crates/ctxfs-provider-npm",
    "crates/ctxfs-provider-pypi",
    "crates/ctxfs-provider-crate",
    "crates/ctxfs-cache-redis",
    "crates/ctxfs-vfs",
    "crates/ctxfs-fskit",
    "crates/ctxfs-app-helper",
    "crates/fskit-rs",
]
exclude = [
    # Phase 0 proof-of-concept, kept for reference. Not part of the workspace
    # because it has its own dependency graph (fskit-rs pulls in prost/protoc).
    "docs/poc/fskit-poc",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
publish = false

[workspace.lints.rust]
unsafe_code = "warn"
unused_results = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides — too noisy or stylistic
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[workspace.dependencies]
# Internal crates
ctxfs-core = { path = "crates/ctxfs-core" }
ctxfs-manifest = { path = "crates/ctxfs-manifest" }
ctxfs-cache = { path = "crates/ctxfs-cache" }
ctxfs-ipc = { path = "crates/ctxfs-ipc" }
ctxfs-provider-git = { path = "crates/ctxfs-provider-git" }
ctxfs-nfs = { path = "crates/ctxfs-nfs" }
ctxfs-provider-common = { path = "crates/ctxfs-provider-common" }
ctxfs-provider-npm = { path = "crates/ctxfs-provider-npm" }
ctxfs-provider-pypi = { path = "crates/ctxfs-provider-pypi" }
ctxfs-provider-crate = { path = "crates/ctxfs-provider-crate" }
ctxfs-daemon = { path = "crates/ctxfs-daemon" }
ctxfs-cache-redis = { path = "crates/ctxfs-cache-redis" }
ctxfs-vfs = { path = "crates/ctxfs-vfs" }
ctxfs-fskit = { path = "crates/ctxfs-fskit" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# FSKit backend (macOS 26+) — forked from crates.io v0.1.0
fskit-rs = { path = "crates/fskit-rs" }

# NFS backend (zero-install, no kernel extension needed)
nfsserve = "0.11"
dashmap = "6"

# IPC
tarpc = { version = "0.35", features = ["tokio1", "serde-transport", "unix"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Crypto / random
rand = "0.8"

# Utilities
linked-hash-map = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio-stream = "0.1"
futures = "0.3"
libc = "0.2"
tempfile = "3"
whoami = "1"
dialoguer = "0.11"
toml = "0.8"
toml_edit = "0.22"
