[package]
name = "ctxfs-cache-redis"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-cache = { workspace = true }
async-trait = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
zstd = "0.13"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
