[package]
name = "ctxfs-cache"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-manifest = { workspace = true }
ctxfs-provider-common = { workspace = true }
linked-hash-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }

[lints]
workspace = true
