[package]
name = "ctxfs"
version.workspace = true
edition = "2021"
publish = false

[[bin]]
name = "ctxfs"
path = "src/main.rs"

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-ipc = { workspace = true }
ctxfs-daemon = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
tarpc = { workspace = true }
whoami = { workspace = true }
dialoguer = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
toml_edit = { workspace = true }
hex = { workspace = true }
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }

[lints]
workspace = true
