[package]
name = "ctxfs-core"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
