[package]
name = "ctxfs-daemon"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
redis = ["ctxfs-cache-redis"]

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-manifest = { workspace = true }
ctxfs-cache = { workspace = true }
ctxfs-cache-redis = { workspace = true, optional = true }
ctxfs-ipc = { workspace = true }
ctxfs-provider-git = { workspace = true }
ctxfs-provider-common = { workspace = true }
ctxfs-provider-npm = { workspace = true }
ctxfs-provider-pypi = { workspace = true }
ctxfs-provider-crate = { workspace = true }
ctxfs-nfs = { workspace = true }
ctxfs-vfs = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }

[lints]
workspace = true
