[package]
name = "ctxfs-fskit"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ctxfs-vfs = { workspace = true }
ctxfs-core = { workspace = true }
ctxfs-manifest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
fskit-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ctxfs-cache = { workspace = true }
ctxfs-manifest = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
prost = "0.14"
libc = { workspace = true }

[lints]
workspace = true
