[package]
name = "ctxfs-fuse"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-manifest = { workspace = true }
ctxfs-cache = { workspace = true }
async-trait = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
