[package]
name = "ctxfs-ipc"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-provider-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
