[package]
name = "ctxfs-nfs"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-vfs = { workspace = true }
async-trait = { workspace = true }
nfsserve = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ctxfs-cache = { workspace = true }
ctxfs-manifest = { workspace = true }
ctxfs-provider-common = { workspace = true }
ctxfs-provider-git = { workspace = true }
ctxfs-vfs = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
