[package]
name = "ctxfs-provider-common"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
