[package]
name = "ctxfs-provider-common"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
