[package]
name = "ctxfs-provider-crate"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-provider-common = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ctxfs-provider-common = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
