[package]
name = "ctxfs-provider-git"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ctxfs-core = { workspace = true }
ctxfs-manifest = { workspace = true }
ctxfs-cache = { workspace = true }
ctxfs-provider-common = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
